--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  zoom: 2.0;
 }
 
 body, app-root {
